# vbpool-frontend

./: .editorconfig  .env.sample  .eslintrc.js  .gitignore  README.md  compose.yml  firebase.json  firestore.rules  index.html  oauth2-proxy.cfg  package-lock.json  package.json  vue.config.js
admin/: get-user-by-email.js  set-role.js
css/: app.1aa730c5.css  app.4c37f916.css  app.75737edc.css  app.ac8351c1.css  app.c1a2c652.css  app.d276bc37.css  app.dc4ab84e.css  app.e7ce5efb.css  app.fcca75f4.css  chunk-vendors.0f73b17c.css  chunk-vendors.53080b24.css
js/: app.0fb5c4a4.js  app.0fb5c4a4.js.map  app.4dfbccc8.js  app.4dfbccc8.js.map  app.517f0032.js  app.517f0032.js.map  app.73200064.js  app.73200064.js.map  app.825dd5e0.js  app.825dd5e0.js.map  app.ab708e59.js  app.ab708e59.js.map  app.b5e697e4.js  app.b5e697e4.js.map  app.b75f5b60.js  app.b75f5b60.js.map  app.d36fcd8a.js  app.d36fcd8a.js.map  app.fb34d690.js  app.fb34d690.js.map  chunk-vendors.5df8ff4a.js  chunk-vendors.5df8ff4a.js.map  chunk-vendors.68bcfbdb.js  chunk-vendors.68bcfbdb.js.map  chunk-vendors.b4003da8.js  chunk-vendors.b4003da8.js.map  chunk-vendors.f6faf64a.js  chunk-vendors.f6faf64a.js.map  (+2 more)
vbpool-server/: Cargo.toml  README.md  Rocket.toml  compose.yml  oauth2-proxy.cfg
vbpool-server/data/: vbpool.db  vbpool.db-shm  vbpool.db-wal
vbpool-server/db/migrations/: 20221022_1.sql
vbpool-server/src/: app.rs  main.rs
vbpool-server/src/api/v1/: auth.rs  mod.rs
vbpool-server/src/models/: mod.rs
vbpool-server/src/tests/: auth.rs  mod.rs  pool_form.rs
vbpool-server/src/tests/common/: mod.rs
(+49 files in other folders)
