[package]
name = "vbpool-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
lazy_static = "1.4.0"
serde_json = "1.0.87"
serde = "1.0.146"

[dependencies.rocket_auth]
version = "^0.4.0"
features = ["sqlx-sqlite"] # hehe with `-`

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["macros", "offline", "migrate"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["sqlx_sqlite"]
